--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="container-fluid">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,14 @@
     </header>
 
     <main class="container-fluid">  
-      <h1 class="text-center text-light mt-3 mb-3"> Wandavision </h1>      
-      <div class="banner-container">          
-          <img class="home-img text-center" src="./img/WandaVision_official_teaster_poster.png"></img>
-      </div>
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center text-light mt-3 mb-3"> Wandavision </h1>   
+        </div>           
+        <div class=" col-12 banner-container text-center">          
+            <img class="home-img " src="./img/WandaVision_official_teaster_poster.png"></img>
+        </div>
+      </div>      
     </main>
     
     <footer class="container-fluid fixed-bottom">
