--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <footer class="container-fluid fixed-bottom">
     <div class="row"> 
         <div class="col-sm-12 col-md-10">
-            <p class="mt-3 text-center text-light font-weight-bold"> Disney+ es un servicio por suscripción de pago, su contenido esta sujeto a disponibilidad.
+            <p class="mt-3 text-center text-light font-weight-bold"> 
+              Disney+ es un servicio por suscripción de pago, su contenido esta sujeto a disponibilidad.
             </p> 
         </div>    
         <div class="mt-1 col-sm-12 col-md-2 text-center mb-1"> 
@@ -69,9 +70,9 @@
             <img src= "img/disney+_logo.png"  alt="Disney Plus"/>
         </a>  
         </div>      
-    </div>
-    
-    </footer>       
+    </div>    
+    </footer>  
+
 </body>
 
 </html>
