--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <a class="navbar-brand" href="index.html"> 
-                <img src="./img/wandavisionlogo.png" width="30" height="30" alt="">
+                <img src="img/home icon.jpg" width="30" height="30" alt="">
               </a>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,7 +62,7 @@
         </div>    
         <div class="mt-1 col-sm-12 col-md-2 text-center mb-1"> 
             <a href="https://www.disneyplus.com/es-ar/welcome?cid=DSS-Search-Google-71700000075032756-&s_kwcid=AL!8468!3!494589911707!e!!g!!disney&gclid=Cj0KCQjwk4yGBhDQARIsACGfAescLhbhYOYJ53WeN92ViEo0O_k9soTIbjDRq6JoSZCNWf44SnHpG4caAq9BEALw_wcB&gclsrc=aw.ds" target="_blank">
-            <img src= "img/disney+_logo.png"  alt="Disney Plus"/>
+            <img src= "img/Disney+_logo1.png"  alt="Disney Plus"/>
         </a>  
         </div>      
     </div>
