fix chapter view

--- a/Episodios.html
+++ b/Episodios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="wanda, vision, wandavision, MCU">
+    <meta name="description" content="esta es una web sobre la serie Wandavision, donde podras encontrar informacion de personajes, y algunas pelis y series que se conectan con el universo Marvel">
     <title> EPISODIOS</title>
     <link rel="stylesheet" href="style-episodios.css"/> 
     <link rel="stylesheet" href="style-cabeza-cuerpo-pies.css"/> 
@@ -48,7 +50,7 @@
 
     <main class="container-fluid">
 
-      <h1> Listado de Episodios de la serie </h1>    
+      <h1> Listado de Episodios de la serie </h1>      
     
       <div class="table-responsive">
         <table class="table">
@@ -128,7 +130,6 @@
 
     </main>
 
-<<<<<<< HEAD
  <footer class="container-fluid fixed-bottom">
           <div class="row"> 
               <div class="col-sm-12 col-md-10">
@@ -143,22 +144,6 @@
           </div>
           
    </footer>
-=======
-    <footer class="container-fluid fixed-bottom">
-      <div class="row"> 
-          <div class="col-sm-12 col-md-10">
-            <p class="mt-3 text-center text-light font-weight-bold"> 
-              Disney+ es un servicio por suscripción de pago, su contenido esta sujeto a disponibilidad.
-            </p> 
-          </div>    
-          <div class="mt-1 col-sm-12 col-md-2 text-center mb-1"> 
-            <a href="https://www.disneyplus.com/es-ar/welcome?cid=DSS-Search-Google-71700000075032756-&s_kwcid=AL!8468!3!494589911707!e!!g!!disney&gclid=Cj0KCQjwk4yGBhDQARIsACGfAescLhbhYOYJ53WeN92ViEo0O_k9soTIbjDRq6JoSZCNWf44SnHpG4caAq9BEALw_wcB&gclsrc=aw.ds" target="_blank">
-              <img src= "img/Disney+_logo1.png"  alt="Disney Plus"/>
-            </a>  
-          </div>      
-      </div>            
-    </footer>
->>>>>>> 040a368804564d9177a2623ba75a1f6bdecb4ffc
 
 </body>
 
