--- a/Personales-carrousel.html
+++ b/Personales-carrousel.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="wanda, vision, wandavision, MCU">
+    <meta name="description" content="esta es una web sobre la serie Wandavision, donde podras encontrar informacion de personajes, y algunas pelis y series que se conectan con el universo Marvel">
     <title> PERSONAJES</title>
     <link rel="stylesheet" href="styles-personajes-carrousel.css"/> 
     <link rel="stylesheet" href="style-cabeza-cuerpo-pies.css"/>
