--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="wanda, vision, wandavision, MCU">
+    <meta name="description" content="esta es una web sobre la serie Wandavision, donde podras encontrar informacion de personajes, y algunas pelis y series que se conectan con el universo Marvel">
     <title> WANDAVISION</title>
     <link rel="stylesheet" href="style-cabeza-cuerpo-pies.css"/>
     <link rel="stylesheet" href="styles1.css"/>
@@ -50,7 +52,7 @@
     <main class="container-fluid">  
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center text-light mt-3 mb-3"> Wandavision </h1>   
+          <h1 class="text-center text-light mt-3 mb-3"> Wandavision </h1>   <!-- Palabra Clave -->
         </div>           
         <div class=" col-12 banner-container text-center">          
             <img class="home-img " src="./img/WandaVision_official_teaster_poster.png"></img>
