--- a/Personales-carrousel.html
+++ b/Personales-carrousel.html
@@ -16,97 +16,88 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 
-<body>
-  <body class="container-fluid">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <a class="navbar-brand" href="index.html"> 
-                <img src="./img/wandavisionlogo.png" width="30" height="30" alt="">
-              </a>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Episodios.html">Episodios</a>
-                  </li>
+<body class="container-fluid">
+
+  <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="index.html"> 
+              <img src="./img/wandavisionlogo.png" width="30" height="30" alt="">
+            </a>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Personales-carrousel.html">Personales</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Imperdible con review.html">Imperdibles</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Contactame.html">Contactanos</a>
-                  </li>
-                </ul>
-              </div>
+                  <a class="nav-link active" aria-current="page" href="Episodios.html">Episodios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="Personales-carrousel.html">Personales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="Imperdible con review.html">Imperdibles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="Contactame.html">Contactanos</a>
+                </li>
+              </ul>
             </div>
-        </nav>
-    </header>
+          </div>
+      </nav>
+  </header>
 
-
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <main>
+    <div class="row card-container">
+      <div id="wanda" class="col-sm-12 col-md-6 col-lg-3 flip-card" >
+        <h3 class="text-light text-center pt-4">Wanda Maximoff</h3>
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="img/Wanda - comic.jpg" alt="Avatar" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <img src="img/Wanda - Elizabeth Olsen.jpg" alt="Avatar" style="width:300px;height:300px;">
+          </div>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="img/Wanda - comic.jpg" class="d-block w-10" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Wanda Maximoff</h5>
-            <p>Elizabeth Olsen</p>
-          </div>
+      </div> 
+      <div id="vision" class="col-sm-12 col-md-6 col-lg-3 flip-card">
+        <h3 class="text-light text-center pt-4">Vision</h3>
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/Vision- comic.jpg" alt="Avatar" style="width:300px;height:300px;">
+            </div>
+            <div class="flip-card-back">
+              <img src="img/Vision- Paul B.jpg" alt="Avatar" style="width:300px;height:300px;">
+            </div>
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/Vision- Paul B.jpg" class="d-block w-10" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Vision</h5>
-            <p>Paul Bettany</p>
+      </div> 
+      <div id="agatha" class="col-sm-12 col-md-6 col-lg-3 flip-card">
+        <h3 class="text-light text-center pt-4">Agatha</h3>
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="img/Agatha Hankness - comic.jpg" alt="Avatar" style="width:300px;height:300px;">
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/Agatha-.jpg" class="d-block w-10" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Agatha Harkness</h5>
-            <p>Kathryn Hahn</p>
+          <div class="flip-card-back">
+            <img src="img/Agatha-.jpg" alt="Avatar" style="width:300px;height:300px;">
           </div>
-        </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      </div> 
     </div>
+  </main>
 
-   
-
-
- <footer class="container-fluid fixed-bottom">
-      <div class="row"> 
-          <div class="col-sm-12 col-md-10">
-              <p class="mt-3 text-center text-light font-weight-bold"> Disney+ es un servicio por suscripción de pago, su contenido esta sujeto a disponibilidad.
-              </p> 
-          </div>    
-          <div class="mt-1 col-sm-12 col-md-2 text-center mb-1"> 
-              <a href="https://www.disneyplus.com/es-ar/welcome?cid=DSS-Search-Google-71700000075032756-&s_kwcid=AL!8468!3!494589911707!e!!g!!disney&gclid=Cj0KCQjwk4yGBhDQARIsACGfAescLhbhYOYJ53WeN92ViEo0O_k9soTIbjDRq6JoSZCNWf44SnHpG4caAq9BEALw_wcB&gclsrc=aw.ds" target="_blank">
-                <img src= "img/Disney+_logo1.png"  alt="Disney Plus"/>
-          </a>  
-          </div>      
-      </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+  <footer class="container-fluid fixed-bottom">
+    <div class="row"> 
+        <div class="col-sm-12 col-md-10">
+            <p class="mt-3 text-center text-light font-weight-bold"> Disney+ es un servicio por suscripción de pago, su contenido esta sujeto a disponibilidad.
+            </p> 
+        </div>    
+        <div class="mt-1 col-sm-12 col-md-2 text-center mb-1"> 
+            <a href="https://www.disneyplus.com/es-ar/welcome?cid=DSS-Search-Google-71700000075032756-&s_kwcid=AL!8468!3!494589911707!e!!g!!disney&gclid=Cj0KCQjwk4yGBhDQARIsACGfAescLhbhYOYJ53WeN92ViEo0O_k9soTIbjDRq6JoSZCNWf44SnHpG4caAq9BEALw_wcB&gclsrc=aw.ds" target="_blank">
+              <img src= "img/Disney+_logo1.png"  alt="Disney Plus"/>
+        </a>  
+        </div>      
+    </div>
+  </footer>
 
 </body>
 
